fix(load-holdings) Reduce the size of the page by half after failed retry (#462)
- Fix trigger before updating holdings_status
- Reduce the size of the page by half after failed retry
- Use the parameter "forse=true" for creating a snapshot. FHIQC-33

Closes: MODKBEKBJ-747