@@ -20,7 +20,6 @@ import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.BiPredicate;
 import java.util.function.IntFunction;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import lombok.extern.log4j.Log4j2;
 import org.apache.commons.lang3.StringUtils;
@@ -29,7 +28,6 @@ import org.folio.holdingsiq.service.impl.LoadServiceImpl;
 import org.folio.repository.holdings.LoadStatus;
 import org.folio.service.holdings.message.ConfigurationMessage;
 import org.folio.service.holdings.message.LoadHoldingsMessage;
-import org.glassfish.jersey.internal.util.Producer;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.lang.Nullable;
 import org.springframework.stereotype.Component;
@@ -46,17 +44,20 @@ public abstract class AbstractLoadServiceFacade implements LoadServiceFacade {
   protected final HoldingsService holdingsService;
   protected final int loadPageRetries;
   protected final int loadPageDelay;
-  private final long statusRetryDelay;
+  private final int loadPageSizeMin;
   private final int statusRetryCount;
   private final int snapshotRefreshPeriod;
+  private final long statusRetryDelay;
   private final Vertx vertx;
 
   protected AbstractLoadServiceFacade(@Value("${holdings.status.check.delay}") long statusRetryDelay,
                                       @Value("${holdings.status.retry.count}") int statusRetryCount,
                                       @Value("${holdings.page.retry.delay}") int loadPageRetryDelay,
-                                      @Value("${holdings.snapshot.refresh.period}") int snapshotRefreshPeriod,
                                       @Value("${holdings.page.retry.count}") int loadPageRetryCount,
+                                      @Value("${holdings.page.size.min}") int loadPageSizeMin,
+                                      @Value("${holdings.snapshot.refresh.period}") int snapshotRefreshPeriod,
                                       Vertx vertx) {
+    this.loadPageSizeMin = loadPageSizeMin;
     this.loadPageDelay = loadPageRetryDelay;
     this.loadPageRetries = loadPageRetryCount;
     this.statusRetryDelay = statusRetryDelay;
@@ -158,57 +159,57 @@ public abstract class AbstractLoadServiceFacade implements LoadServiceFacade {
   }
 
   /**
-   * Runs action provided by futureProducer, if future is completed exceptionally then futureProducer
+   * Runs action provided by futureFunction, if future is completed exceptionally then futureFunction
    * will be called again after given delay.
    *
    * @param retries        Amount of times action will be retried
-   *                       (e.g. if retries = 2 then futureProducer will be called 2 times)
+   *                       (e.g. if retries = 2 then futureFunction will be called 2 times)
    * @param delay          delay in milliseconds before action is executed again after failure
-   * @param futureProducer provides an asynchronous action
+   * @param futureFunction provides an asynchronous action
    * @return future returned by
    */
   private <T> CompletableFuture<T> retryOnFailure(int retries, long delay,
-                                                  Producer<CompletableFuture<T>> futureProducer) {
+                                                  IntFunction<CompletableFuture<T>> futureFunction) {
     CompletableFuture<T> future = new CompletableFuture<>();
-    retryOnFailure(retries, delay, future, futureProducer);
+    retryOnFailure(retries, delay, future, futureFunction);
     return future;
   }
 
   private <T> void retryOnFailure(int retries, long delay, CompletableFuture<T> future,
-                                  Producer<CompletableFuture<T>> futureProducer) {
-    doUntilResultMatches(retries, delay, future, futureProducer, (result, ex) -> ex == null);
+                                  IntFunction<CompletableFuture<T>> futureFunction) {
+    doUntilResultMatches(retries, delay, future, futureFunction, (result, ex) -> ex == null);
   }
 
   /**
-   * Runs action provided by futureProducer, when future completes the result is passed to matcher,
-   * if matcher returns false then futureProducer will be called again after delay.
+   * Runs action provided by futureFunction, when future completes the result is passed to matcher,
+   * if matcher returns false then futureFunction will be called again after delay.
    * if matcher returns true then the result is propagated to returned CompletableFuture
    * if matcher throws exception then exception is propagated to returned CompletableFuture and action is not retried
    *
-   * @param retries        Amount of times action will be retried (e.g. if retries = 2 then futureProducer
+   * @param retries        Amount of times action will be retried (e.g. if retries = 2 then futureFunction
    *                       will be called 2 times)
    * @param delay          delay in milliseconds before action is executed again after failure
-   * @param matcher        predicate that determines if futureProducer should be called again after delay
-   * @param futureProducer provides an asynchronous action to be executed
+   * @param matcher        predicate that determines if futureFunction should be called again after delay
+   * @param futureFunction provides an asynchronous action to be executed
    */
   protected <T> CompletableFuture<T> doUntilResultMatches(int retries, long delay,
-                                                          Producer<CompletableFuture<T>> futureProducer,
+                                                          IntFunction<CompletableFuture<T>> futureFunction,
                                                           BiPredicate<T, Throwable> matcher) {
     CompletableFuture<T> future = new CompletableFuture<>();
-    doUntilResultMatches(retries, delay, future, futureProducer, matcher);
+    doUntilResultMatches(retries, delay, future, futureFunction, matcher);
     return future;
   }
 
   private <T> void doUntilResultMatches(int retries, long delay, CompletableFuture<T> future,
-                                        Producer<CompletableFuture<T>> futureProducer,
+                                        IntFunction<CompletableFuture<T>> futureFunction,
                                         BiPredicate<T, Throwable> matcher) {
-    futureProducer.call()
+    futureFunction.apply(retries)
       .handle((result, ex) -> {
         if (matcher.test(result, ex)) {
           future.complete(result);
         } else {
           if (retries > 1) {
-            vertx.setTimer(delay, timerId -> doUntilResultMatches(retries - 1, delay, future, futureProducer, matcher));
+            vertx.setTimer(delay, timerId -> doUntilResultMatches(retries - 1, delay, future, futureFunction, matcher));
           } else {
             future.completeExceptionally(
               ex != null ? ex : new IllegalStateException("Action failed with result " + result));
@@ -250,12 +251,20 @@ public abstract class AbstractLoadServiceFacade implements LoadServiceFacade {
   protected CompletableFuture<Void> loadWithPagination(Integer totalPages,
                                                        IntFunction<CompletableFuture<Void>> pageLoader) {
     CompletableFuture<Void> future = CompletableFuture.completedFuture(null);
-    List<Integer> pagesToLoad = IntStream.range(1, totalPages + 1).boxed().collect(Collectors.toList());
+    List<Integer> pagesToLoad = IntStream.range(1, totalPages + 1).boxed().toList();
     for (Integer page : pagesToLoad) {
-      future = future
-        .thenCompose(o -> retryOnFailure(loadPageRetries, loadPageDelay, () -> pageLoader.apply(page)));
+      future = future.thenCompose(
+        o -> retryOnFailure(loadPageRetries, loadPageDelay, retries -> calculatePage(pageLoader, page, retries)));
     }
     return future;
+  }
+
+  protected CompletableFuture<Void> calculatePage(IntFunction<CompletableFuture<Void>> pageLoader,
+                                                  Integer page, Integer retries) {
+    if (loadPageRetries > retries) {
+      page = Math.max(page / 2, loadPageSizeMin);
+    }
+    return pageLoader.apply(page);
   }
 
   /**
